refactor: restructuration des services d'attestation et génération QR code
- Suppression de ServerConfig.java
- Ajout du service GenererAttestationQrCode
- Mise à jour des générateurs d'attestation